--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -49,3 +49,15 @@
 button.FloatingButton--remove {
   display: none;
 }
+
+button.FloatingButton--green {
+  background-color: @alert_green_tint_1;
+  border-color: @alert_green_tint_1;
+  color: @neutral_white;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: @alert_green_tint_1;
+    border-color: @alert_green_tint_1;
+  }
+}
