--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -43,13 +43,13 @@ button.FloatingButton--button {
 }
 
 .FloatingButton--inactive--bottom {
-  transform: translateY(2.5rem);
+  transform: translateY(2.5rem); // used for animation
   opacity: 0;
   pointer-events: none;
 }
 
 .FloatingButton--inactive--top {
-  transform: translateY(-2.5rem);
+  transform: translateY(-2.5rem); // used for animation
   opacity: 0;
   pointer-events: none;
 }
