added close icon svg

--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -42,6 +42,10 @@ button.FloatingButton--button {
   border-radius: 500rem;
 }
 
+.FloatingButton--icon {
+  .margin--right--xs();
+}
+
 .FloatingButton--inactive--bottom {
   transform: translateY(2.5rem); // used for animation
   opacity: 0;
