--- a/src/Icon/Icon.less
+++ b/src/Icon/Icon.less
@@ -12,6 +12,16 @@
   }
 }
 
+.Icon--2xs {
+  height: @size_s;
+  width: @size_s;
+}
+
+.Icon--xs {
+  height: @size_m;
+  width: @size_m;
+}
+
 .Icon--small {
   height: @size_l;
   width: @size_l;
