--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -44,6 +44,9 @@ button.FloatingButton--button {
 
 .FloatingButton--icon {
   .margin--right--xs();
+  & > svg {
+    vertical-align: top;
+  }
 }
 
 .FloatingButton--inactive--bottom {
