radio button to top of respective options

--- a/src/RadioGroup/Radio.less
+++ b/src/RadioGroup/Radio.less
@@ -21,6 +21,7 @@
   background-color: @neutral_white;
   border: @radioOuterBorderWidth solid @primary_blue_tint_2;
   transition: @radioTransition;
+  margin-bottom: auto;
 }
 
 .Radio--inner {
