--- a/components/Layout.less
+++ b/components/Layout.less
@@ -13,6 +13,7 @@ body {
   min-height: 100vh;
   padding: 0;
   width: 100%;
+  overflow: hidden;
 }
 
 .Dewey--docs {
@@ -28,7 +29,13 @@ body {
 
 .Layout--sideBar {
   .flexShrink(0);
-  height: auto;
+  height: calc(100vh - 3.75rem);
+}
+
+.Layout--viewContainer {
+  height: calc(100vh - 3.75rem);
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .Layout--mainContainer {
