FEE-63 & FEE-155 added optional tag to textInput, consistent behaviour for required tag in textArea and textInput

--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -40,6 +40,11 @@
       position: absolute;
       right: @size_l;
     }
+
+    .TextInput--optional {
+      position: absolute;
+      right: @size_l;
+    }
   }
 
   .TextInput--input {
