--- a/src/FormError/FormError.less
+++ b/src/FormError/FormError.less
@@ -19,7 +19,7 @@
 .FormError--icon {
   height: 1.25em; // Match font line height to center with first line of text.
   width: 0.875em; // Match font size at a ratio of 14px:16px.
-  .flexShrink(0)
+  .flexShrink(0);
 }
 
 .FormError--ErrorIcon--path {
