--- a/src/WizardLayout/WizardLayout.less
+++ b/src/WizardLayout/WizardLayout.less
@@ -122,8 +122,7 @@
 }
 
 // Hack for IE only styles
-@media screen and (-ms-high-contrast: active),
-(-ms-high-contrast: none) {
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .WizardLayout--fullscreen {
     min-height: 100vh;
   }
