Add focus outlines to AlertBox close button and linkPlain Buttons

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -135,9 +135,12 @@ button {
     color: @primary_blue;
 
     &:hover,
-    &:focus,
     &:active {
       color: @primary_blue_shade_2;
+    }
+    &:focus {
+      outline: @borderRadiusM solid fade(@primary_blue_tint_2, 50%);
+      transition: none;
     }
   }
 
