Use <h3>s for <AlertBox> titles

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -6,10 +6,13 @@
   .border--s(transparent);
 }
 
-.AlertBox--title {
-  .text--semi-bold();
-  .text--large();
+h3.AlertBox--title {
+  .margin--none();
   .margin--bottom--s();
+  .padding--none();
+  .text--large();
+  .text--semi-bold();
+  color: @neutral_black;
 }
 
 .AlertBox--header {
