--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -56,6 +56,7 @@
     min-height: @size_2xl;
     padding-top: @size_s;
     background-color: transparent;
+    box-shadow: none;
   }
 
   &.TextInput--placeholder-shown {
