[Table] Reset table padding when noDataContent is provided

--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.Table--no_data_cell_with_content {
+  padding: 0;
+}
+
 .Table--row {
   .border--bottom--s(@neutral_silver);
   transition: background-color @timingImmediately @motionSmooth;
