--- a/components/TableView.less
+++ b/components/TableView.less
@@ -3,11 +3,16 @@
 .TableView--config {
   .margin--y--s;
   .margin--left--none;
-  .margin--right--xs;
+  .margin--right--l;
   .text--small;
   cursor: pointer;
   display: inline-block;
   text-transform: uppercase;
+}
+
+.TableView--configOptions {
+  .margin--left--2xs;
+  display: inline-block;
 }
 
 .TableView--status {
