Resize logo in topBar

--- a/src/TopBar/index.less
+++ b/src/TopBar/index.less
@@ -22,6 +22,12 @@
   font-size: 1.75rem;
 }
 
+@media only screen and (max-width: @breakpointS) {
+  .dewey--TopBar--logo--mobile {
+    width: 2em;
+  }
+}
+
 .dewey--TopBar--logoLink {
   .padding--x--m;
 }
