added comments noting link between breakpointS definitions

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -1,5 +1,6 @@
 /**
  * Layout size and breakpoint definitions.
+ * Note: should be kept in sync with breakpointS as defined in src/utils/Constants.ts
  */
 
 @breakpointS: 40em;
