--- a/docs/components/Layout.less
+++ b/docs/components/Layout.less
@@ -98,7 +98,7 @@ a {
   &:hover,
   &:focus {
     .shade(color, @primary_blue, 2);
-    border-bottom-color: @primary_blue_shade_2
+    border-bottom-color: @primary_blue_shade_2;
   }
 }
 
