use underlined prop instead of type

--- a/components/ButtonView.less
+++ b/components/ButtonView.less
@@ -2,7 +2,7 @@
 
 .ButtonView {
   .Button {
-    &:not(:last-child):not(.Button--linkUnderlined) {
+    &:not(:last-child):not(.Button--linkPlain) {
       .margin--right--m;
     }
   }
