--- a/src/CopyableInput/CopyableInput.less
+++ b/src/CopyableInput/CopyableInput.less
@@ -27,6 +27,7 @@
     background: none;
     color: @primary_blue;
     font-size: @type_small;
+    padding: @size_4xs @size_xs @size_3xs;
     .border--right--s(@neutral_silver);
     .shade(border-right-color, @neutral_silver, 1);
 
