--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -4,42 +4,42 @@
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-Light-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-Light-webfont.woff");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-Reg-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-Reg-webfont.woff");
   font-weight: normal; // 400
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-Sbold-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-Sbold-webfont.woff");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-Bold-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-Bold-webfont.woff");
   font-weight: bold; // 700
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-Black-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-Black-webfont.woff");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("../../assets/fonts/ProximaNova-RegItalic-webfont.woff");
+  src: url("https://assets.clever.com/fonts/ProximaNova-RegItalic-webfont.woff");
   font-weight: normal;
   font-style: italic;
 }
