use fontawesome icons

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -34,7 +34,7 @@ h3.AlertBox--title {
 }
 
 .AlertBox--Icon--warning {
-  fill: @alert_orange;
+  color: @alert_orange;
 }
 
 .AlertBox--success {
@@ -43,7 +43,7 @@ h3.AlertBox--title {
 }
 
 .AlertBox--Icon--success {
-  fill: @alert_green;
+  color: @alert_green;
 }
 
 .AlertBox--error {
@@ -52,7 +52,7 @@ h3.AlertBox--title {
 }
 
 .AlertBox--Icon--error {
-  fill: @alert_red;
+  color: @alert_red;
 }
 
 .AlertBox--info {
@@ -61,7 +61,7 @@ h3.AlertBox--title {
 }
 
 .AlertBox--Icon--info {
-  fill: @primary_blue;
+  color: @primary_blue;
 }
 
 .AlertBox--close {
