--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -25,7 +25,16 @@ h3.AlertBox--title {
 }
 
 .AlertBox--Icon {
-  margin-top: 0.4rem;
+  .margin--top--xs();
+}
+
+.AlertBox--processing {
+  border-color: @neutral_dark_gray;
+  background-color: fade(@neutral_dark_gray, 2%);
+}
+
+.AlertBox--Icon--processing {
+  color: @neutral_dark_gray;
 }
 
 .AlertBox--warning {
