add sticky mixin

--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -12,6 +12,7 @@
 @import "./forms";
 @import "./grid";
 @import "./layout";
+@import "./position";
 @import "./resets";
 @import "./sizing";
 @import "./spacing";
