--- a/docs/components/ComponentBox.less
+++ b/docs/components/ComponentBox.less
@@ -1,7 +1,8 @@
 @import (reference) "~src/less/utilities";
 
 .ComponentBox--ComponentContainer {
-  .padding--bottom--l;
+  .padding--y--l;
+  border-bottom: @size_3xs @primary_blue_tint_2 solid;
 }
 
 .ComponentBox--ComponentImg {
