--- a/docs/components/ComponentBox.less
+++ b/docs/components/ComponentBox.less
@@ -2,13 +2,20 @@
 
 .ComponentBox--ComponentContainer {
   .padding--y--l;
+  .padding--right--xl;
   border-bottom: @size_3xs @primary_blue_tint_2 solid;
+  max-width: 22rem;
+  width: 22rem;
+}
+
+.ComponentsView--FlexBox {
+  max-width: 120rem;
 }
 
 .ComponentBox--ComponentImg {
-  // display: block;
   max-width: 30rem;
   max-height: 20rem;
   width: auto;
   height: auto;
+  max-width: 100%;
 }
