--- a/src/LeftNav/LeftNav.less
+++ b/src/LeftNav/LeftNav.less
@@ -14,6 +14,10 @@
   width: @paneWidth;
 }
 
+.LeftNav--narrow .NavLink {
+  .padding--y--xs;
+}
+
 .LeftNav--withSubnavOpen {
   width: @paneWidth * 2;
 }
