--- a/docs/components/Layout.less
+++ b/docs/components/Layout.less
@@ -33,6 +33,8 @@ body {
 }
 
 .Layout--viewContainer {
+  .flexbox();
+  .flex--grow();
   height: calc(100vh - 3.75rem);
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
