IL-2104 - CopyableInput: add aria-live polite tags for accessibility, and fix awkward positioning of 'REQUIRED' text vis-a-vis 'Show|Copy' toggles

--- a/src/CopyableInput/CopyableInput.less
+++ b/src/CopyableInput/CopyableInput.less
@@ -9,6 +9,7 @@
   .flexbox();
   background: @neutral_white;
   width: 100%;
+  position: relative;
 
   .TextInput {
     border: none;
@@ -17,10 +18,13 @@
 }
 
 .CopyableInput--links {
-  margin: auto @size_s;
+  margin: auto @size_xs;
   white-space: nowrap;
   background: white;
   .flexShrink(0);
+  position: absolute;
+  right: 0;
+  top: 40%;
 
   .CopyableInput--link {
     border: 0;
