override react-select border radius style that rounds the last menu item

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -150,5 +150,9 @@
         background-color: @neutral_off_white;
       }
     }
+
+    .Select-option:last-child {
+      border-radius: unset;
+    }
   }
 }
