Add showStepNumber prop

--- a/docs/components/MultiplePanelModalsView.less
+++ b/docs/components/MultiplePanelModalsView.less
@@ -42,3 +42,7 @@ label.MultiplePanelModalsView--config {
 .MultiplePanelModalsView--props {
   .margin--top--l;
 }
+
+.MultiplePanelModals--stepNumber {
+  .margin--right--m();
+}
