Fix utilities reference

--- a/docs/components/MultiplePanelModalsView.less
+++ b/docs/components/MultiplePanelModalsView.less
@@ -1,4 +1,4 @@
-@import (reference) "~src/less/utilities";
+@import (reference) "../less/utilities";
 
 .MultiplePanelModalsView--intro {
   .margin--bottom--xl;
