--- a/src/MultiplePanelModals/MultiplePanelModals.less
+++ b/src/MultiplePanelModals/MultiplePanelModals.less
@@ -1,4 +1,4 @@
-@import (reference) "~src/less/utilities";
+@import (reference) "../less/utilities";
 
 .MultiplePanelModals--stepNumber {
   .margin--right--m();
