--- a/components/MultiplePanelModalsView.less
+++ b/components/MultiplePanelModalsView.less
@@ -1,4 +1,4 @@
-@import (reference) "../less/utilities";
+@import (reference) "~less/index";
 
 .MultiplePanelModalsView--intro {
   .margin--bottom--xl;
