Move Wizard progress assets to component level

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -91,19 +91,19 @@
 
   &.Wizard--stepsDisplay--visited {
     .Wizard--stepsDisplay--icon {
-      background-image: url("../../assets/images/progress_notFinished.svg");
+      background-image: url("./assets/images/progress_notFinished.svg");
     }
   }
 
   &.Wizard--stepsDisplay--valid {
     .Wizard--stepsDisplay--icon {
-      background-image: url("../../assets/images/progress_done.svg");
+      background-image: url("./assets/images/progress_done.svg");
     }
   }
 
   &.Wizard--stepsDisplay--currentStep {
     .Wizard--stepsDisplay--icon {
-      background-image: url("../../assets/images/progress_here.svg");
+      background-image: url("./assets/images/progress_here.svg");
     }
   }
 }
@@ -119,7 +119,7 @@
   .flexShrink(0);
   width: @size_l;
   height: @size_l;
-  background-image: url("../../assets/images/progress_notStarted.svg");
+  background-image: url("./assets/images/progress_notStarted.svg");
   background-repeat: no-repeat;
   background-size: contain;
   .margin--right--s;
