--- a/docs/components/ResourceTileView.less
+++ b/docs/components/ResourceTileView.less
@@ -42,3 +42,7 @@ label.ResourceTileView--config {
 .ResourceTileView--props {
   .margin--top--l;
 }
+
+.ResourceTileView--example .Demo {
+  background-color: transparent;
+}
