Move Launchpad specific animation styles into dewey and fix imports

--- a/src/ResourceTile/ResourceTile.less
+++ b/src/ResourceTile/ResourceTile.less
@@ -1,5 +1,4 @@
-@import (reference) "~clever-components/dist/less/index";
-@import (reference) "~src/ui/lib/less/animation";
+@import (reference) "../less/index";
 
 // The Dewey sizing mixins aren't granular enough, so we're using custom values
 @iconSizeSmall: 5rem;
