Accept arbitrary node for icon

--- a/components/ResourceTileView.less
+++ b/components/ResourceTileView.less
@@ -46,3 +46,7 @@ label.ResourceTileView--config {
 .ResourceTileView--example .Demo {
   background-color: transparent;
 }
+
+.ResourceTileView--exampleNode {
+  text-align: center;
+}
