Change style to be dewey--

--- a/src/ResourceTile/ResourceTile.less
+++ b/src/ResourceTile/ResourceTile.less
@@ -11,7 +11,7 @@
 @fontSizeMedium: 0.875rem;
 @fontSizeLarge: 1rem;
 
-.ResourceTile {
+.dewey--ResourceTile {
   .borderRadius--xl;
   .margin--right--xs;
   .margin--bottom--xs;
@@ -19,40 +19,40 @@
   position: relative;
 }
 
-a.ResourceTile--link {
+a.dewey--ResourceTile--link {
   color: @neutral_black;
   text-decoration: none;
 }
 
-.ResourceTile--overlay {
+.dewey--ResourceTile--overlay {
   left: 0;
   pointer-events: none; // Don't let overlays block clicks on resources
   position: absolute;
   top: 0;
 }
 
-.ResourceTile--size--small .ResourceTile--iconContainer,
-.ResourceTile--size--small .ResourceTile--overlay {
+.dewey--ResourceTile--size--small .dewey--ResourceTile--iconContainer,
+.dewey--ResourceTile--size--small .dewey--ResourceTile--overlay {
   height: @iconSizeSmall;
   width: @iconSizeSmall;
   margin: @resourceTilePaddingSmall;
 }
 
-.ResourceTile--size--medium .ResourceTile--iconContainer,
-.ResourceTile--size--medium .ResourceTile--overlay {
+.dewey--ResourceTile--size--medium .dewey--ResourceTile--iconContainer,
+.dewey--ResourceTile--size--medium .dewey--ResourceTile--overlay {
   height: @iconSizeMedium;
   width: @iconSizeMedium;
   margin: @resourceTilePaddingMedium;
 }
 
-.ResourceTile--size--large .ResourceTile--iconContainer,
-.ResourceTile--size--large .ResourceTile--overlay {
+.dewey--ResourceTile--size--large .dewey--ResourceTile--iconContainer,
+.dewey--ResourceTile--size--large .dewey--ResourceTile--overlay {
   height: @iconSizeLarge;
   width: @iconSizeLarge;
   margin: @resourceTilePaddingLarge;
 }
 
-.ResourceTile--icon {
+.dewey--ResourceTile--icon {
   .borderRadius--10percent;
   max-height: 100%;
   max-width: 100%;
@@ -60,69 +60,69 @@ a.ResourceTile--link {
 
 // These styles are only necessary for when we're super zoomed out and icons are actually too small
 // to fit their containers
-.ResourceTile--icon.ResourceTile--icon--landscape {
+.dewey--ResourceTile--icon.dewey--ResourceTile--icon--landscape {
   width: 100%;
 }
 
-.ResourceTile--icon.ResourceTile--icon--portrait {
+.dewey--ResourceTile--icon.dewey--ResourceTile--icon--portrait {
   height: 100%;
 }
 
-.ResourceTile--size--small .ResourceTile--titleContainer {
+.dewey--ResourceTile--size--small .dewey--ResourceTile--titleContainer {
   margin: @resourceTilePaddingSmall;
   margin-top: 0;
 }
 
-.ResourceTile--size--medium .ResourceTile--titleContainer {
+.dewey--ResourceTile--size--medium .dewey--ResourceTile--titleContainer {
   margin: @resourceTilePaddingMedium;
   margin-top: 0;
 }
 
-.ResourceTile--size--large .ResourceTile--titleContainer {
+.dewey--ResourceTile--size--large .dewey--ResourceTile--titleContainer {
   margin: @resourceTilePaddingLarge;
   margin-top: 0;
 }
 
 // For IE. Even though the parent ResourceTile has a max-width set, this child doesn't respect that
 // max on IE
-.ResourceTile--size--small .ResourceTile--titleAndNotes {
+.dewey--ResourceTile--size--small .dewey--ResourceTile--titleAndNotes {
   max-width: @iconSizeSmall;
   font-size: @fontSizeSmall;
 }
 
-.ResourceTile--size--medium .ResourceTile--titleAndNotes {
+.dewey--ResourceTile--size--medium .dewey--ResourceTile--titleAndNotes {
   max-width: @iconSizeMedium;
   font-size: @fontSizeMedium;
 }
 
-.ResourceTile--size--large .ResourceTile--titleAndNotes {
+.dewey--ResourceTile--size--large .dewey--ResourceTile--titleAndNotes {
   max-width: @iconSizeLarge;
   font-size: @fontSizeLarge;
 }
 
-.ResourceTile--title {
+.dewey--ResourceTile--title {
   overflow: hidden;
   word-wrap: break-word; // For IE
   overflow-wrap: break-word;
   .text--center();
 }
 
-.ResourceTile--notes {
+.dewey--ResourceTile--notes {
   .margin--left--2xs;
 }
 
-.ResourceTile--additionalInfo {
+.dewey--ResourceTile--additionalInfo {
   .margin--top--xs;
 }
 
-.ResourceTile--action {
+.dewey--ResourceTile--action {
   cursor: pointer;
   .text--center();
   width: 100%;
   border-radius: 10% ~"/" 50%;
 }
 
-button.ResourceTile--actionButton {
+button.dewey--ResourceTile--actionButton {
   .padding--y--4xs();
   .text--center();
   width: 100%;
@@ -131,25 +131,25 @@ button.ResourceTile--actionButton {
 
 // We intentionally keep these styles outside the .mq-hover block because teachers should be able
 // to edit resources on devices even if they don't support true hover (mobile for example)
-.ResourceTile--action:last-child {
+.dewey--ResourceTile--action:last-child {
   .margin--top--2xs;
   .margin--bottom--2xs;
   visibility: hidden;
   .fadeOut(@timingPromptly);
 }
 
-.ResourceTile:hover .ResourceTile--action:last-child {
+.dewey--ResourceTile:hover .dewey--ResourceTile--action:last-child {
   .fadeIn(@timingPromptly, @timingPromptly);
 }
 
 // Only apply the following styles if the device supports true hover
 .mq-hover {
-  .ResourceTile {
+  .dewey--ResourceTile {
     .boxShadowHoverAnimation(@borderRadiusXL);
   }
 }
 
-.ResourceTile--notification {
+.dewey--ResourceTile--notification {
   .zIndex--2;
   border-radius: 50%;
   background-color: @alert_red_shade_1;
@@ -160,27 +160,27 @@ button.ResourceTile--actionButton {
   position: absolute;
 }
 
-.ResourceTile--draggableIcon {
+.dewey--ResourceTile--draggableIcon {
   &:hover {
     cursor: grab;
   }
 }
 
-.ResourceTile--size--small .ResourceTile--draggableIcon {
+.dewey--ResourceTile--size--small .dewey--ResourceTile--draggableIcon {
   padding: @resourceTilePaddingSmall;
   padding-top: 0;
 }
 
-.ResourceTile--size--medium .ResourceTile--draggableIcon {
+.dewey--ResourceTile--size--medium .dewey--ResourceTile--draggableIcon {
   padding: @resourceTilePaddingMedium;
   padding-top: 0;
 }
 
-.ResourceTile--size--large .ResourceTile--draggableIcon {
+.dewey--ResourceTile--size--large .dewey--ResourceTile--draggableIcon {
   padding: @resourceTilePaddingLarge;
   padding-top: 0;
 }
 
-.ResourceTile--size--small .ResourceTile--actionButton {
+.dewey--ResourceTile--size--small .dewey--ResourceTile--actionButton {
   font-size: @fontSizeMedium;
 }
