--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -116,16 +116,16 @@ button {
 
   &.Button--secondaryDestructive {
     background-color: @neutral_white;
-    border-color: @alert_red_tint_2;
+    border-color: @alert_red;
     border-bottom-color: @alert_red;
     color: @alert_red;
 
     &:hover,
     &:focus,
     &:active {
-      background-color: @alert_red_tint_2;
-      border-color: @alert_red_tint_2;
-      border-bottom-color: @alert_red_tint_1;
+      background-color: @alert_red_shade_2;
+      border-color: @alert_red;
+      border-bottom-color: @alert_red;
       color: @neutral_white;
     }
   }
