--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -28,6 +28,10 @@ h3.AlertBox--title {
   .margin--top--xs();
 }
 
+.AlertBox--children {
+  .margin--top--2xs();
+}
+
 .AlertBox--processing {
   border-color: @neutral_dark_gray;
   background-color: fade(@neutral_dark_gray, 2%);
