Rename components, make DraftPencil a component instead of svg

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -1,6 +1,6 @@
-@import (reference) "~clever-components/dist/less/index";
+@import (reference) "../less/index";
 
-.MessageBubble--Message--Own {
+.MessagingBubble--Message--Own {
   .padding--xs();
   max-width: 25rem;
   border-radius: 0.3125rem;
@@ -10,7 +10,7 @@
   white-space: pre-wrap;
 }
 
-.MessageBubble--Message--Other {
+.MessagingBubble--Message--Other {
   .padding--xs();
   max-width: 25rem;
   border-radius: 0.3125rem;
