--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -1,6 +1,6 @@
-@import (reference) "~clever-components/dist/less/index";
+@import (reference) "../less/index";
 
-.MessageInput--TextField {
+.MessagingInput--TextField {
   .margin--right--xs();
   .padding--y--none();
   min-height: 2.75rem;
@@ -26,7 +26,7 @@
   }
 }
 
-button.MessageInput--SendButton {
+button.MessagingInput--SendButton {
   // Sizing for this button is pretty particular
   padding: 0.6875rem @size_l 0.6875rem;
 }
