Fix some imports, add exports

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -1,4 +1,4 @@
-@import (reference) "~clever-components/dist/less/index";
+@import (reference) "../less/index";
 
 .MessageMetadata--Message--center {
   .margin--y--l();
