--- a/src/MessagingNewThread/MessagingNewThread.less
+++ b/src/MessagingNewThread/MessagingNewThread.less
@@ -1,4 +1,4 @@
-@import (reference) "~clever-components/dist/less/index";
+@import (reference) "../less/index";
 
 .NewThread {
   position: relative;
