--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -4,7 +4,7 @@
   .padding--xs();
   max-width: 25rem;
   border-radius: 0.3125rem;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: @neutral_dark_gray;
   .text--line-height-4();
   white-space: pre-wrap;
@@ -15,7 +15,7 @@
   max-width: 25rem;
   border-radius: 0.3125rem;
   color: @neutral_black;
-  background-color: #F3F5FD;
+  background-color: #f3f5fd;
   .text--line-height-4();
   white-space: pre-wrap;
 }
