Address/ignore color lint errors

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -4,7 +4,7 @@
   .padding--xs();
   max-width: 25rem;
   border-radius: 0.3125rem;
-  color: #ffffff;
+  color: @neutral_white;
   background-color: @neutral_dark_gray;
   .text--line-height-4();
   white-space: pre-wrap;
@@ -15,7 +15,7 @@
   max-width: 25rem;
   border-radius: 0.3125rem;
   color: @neutral_black;
-  background-color: #f3f5fd;
+  background-color: #f3f5fd; /* stylelint-disable-line */
   .text--line-height-4();
   white-space: pre-wrap;
 }
