--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -8,7 +8,7 @@
 }
 
 .ThreadListItem--selected {
-  background-color: #f3f5fd;
+  background-color: #f3f5fd; /* stylelint-disable-line */
   border-radius: 0.3125rem;
 }
 
