Allow for messaging-avatar to display images

--- a/src/MessagingAvatar/MessagingAvatar.less
+++ b/src/MessagingAvatar/MessagingAvatar.less
@@ -1,5 +1,11 @@
 @import (reference) "../less/index";
 
+.Avatar--Image {
+  height: @size_xl;
+  width: @size_xl;
+  border-radius: 50%;
+}
+
 .Avatar--Circle {
   height: @size_xl;
   width: @size_xl;
