--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -6,6 +6,8 @@
   margin-right: auto;
   .flexbox();
   .text--center();
+  // Without this, messages 'bunch up' on Safari.
+  flex-shrink: 0;
 }
 
 .MessageMetadata--Message--right {
@@ -14,6 +16,8 @@
   .flexbox();
   flex-direction: row-reverse;
   align-items: center;
+  // Without this, messages 'bunch up' on Safari.
+  flex-shrink: 0;
 }
 
 .MessageMetadata--Message--left {
@@ -22,6 +26,8 @@
   .flexbox();
   flex-direction: row;
   align-items: center;
+  // Without this, messages 'bunch up' on Safari.
+  flex-shrink: 0;
 }
 
 .MessageMetadata--Timestamp--right {
