incremental improvements for a few parts of messaging components: desktop styling, mobile styling, accessibility

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -34,12 +34,12 @@
   .margin--right--xs();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: @neutral_gray;
+  color: #686f88;
 }
 
 .MessageMetadata--Timestamp--left {
   .margin--left--xs();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: @neutral_gray;
+  color: #686f88;
 }
