--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -9,11 +9,10 @@
 
 .ThreadListItem--selected {
   background-color: #f3f5fd; /* stylelint-disable-line */
-  border-radius: 0.3125rem;
 }
 
 .ThreadListItem--off {
-  color: @neutral_gray;
+  color: #686f88;
 }
 
 .ThreadListItem--Icon {
@@ -51,7 +50,7 @@
   .text--nowrap();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: @neutral_gray;
+  color: #686f88;
 }
 
 .ThreadListItem--Timestamp--selected {
