--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -1,5 +1,9 @@
 @import (reference) "../less/index";
 
+.MessagingInput--Container {
+  position: relative;
+}
+
 .MessagingInput--TextField {
   .margin--right--xs();
   .padding--y--none();
@@ -18,7 +22,7 @@
 
   &.TextArea--placeholder-shown {
     .TextArea--input {
-      color: @neutral_gray;
+      color: #686f88;
       min-height: @size_l;
       .text--medium();
       white-space: nowrap;
@@ -26,7 +30,44 @@
   }
 }
 
+.MessagingInput--SendIcon {
+  display: none;
+}
+
+.MessagingInput--SendText {
+  display: block;
+}
+
 button.MessagingInput--SendButton {
   // Sizing for this button is pretty particular
-  padding: 0.6875rem @size_l 0.6875rem;
+  padding: 0.625rem @size_l 0.625rem;
+}
+
+@media only screen and (max-width: @breakpointM) {
+  .MessagingInput--TextField {
+    .margin--right--none();
+    border-radius: @size_m;
+    min-height: 2rem;
+  }
+
+  .MessagingInput--SendIcon {
+    display: block;
+    background-color: transparent;
+    border-radius: 50%;
+  }
+
+  .MessagingInput--SendText {
+    display: none;
+  }
+
+  button.MessagingInput--SendButton {
+    position: absolute;
+    right: 0.375rem;
+    bottom: 0.375rem;
+    height: @size_xl;
+    width: @size_xl;
+    padding: 0;
+    border: none;
+    border-radius: 50%;
+  }
 }
