--- a/src/MessagingThreadHistory/MessagingThreadHistory.less
+++ b/src/MessagingThreadHistory/MessagingThreadHistory.less
@@ -10,7 +10,7 @@
   .margin--y--m();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: @neutral_gray;
+  color: #686f88;
   .text--center();
 }
 
