add new shade of gray used in Messaging components, tentatively titled messaging_gray til someone has something better to call it

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -22,7 +22,7 @@
 
   &.TextArea--placeholder-shown {
     .TextArea--input {
-      color: #686f88;
+      color: @neutral_medium_gray;
       min-height: @size_l;
       .text--medium();
       white-space: nowrap;
