--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -12,7 +12,7 @@
 }
 
 .ThreadListItem--off {
-  color: #686f88;
+  color: @neutral_medium_gray;
 }
 
 .ThreadListItem--Icon {
@@ -50,7 +50,7 @@
   .text--nowrap();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: #686f88;
+  color: @neutral_medium_gray;
 }
 
 .ThreadListItem--Timestamp--selected {
