--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -34,12 +34,12 @@
   .margin--right--xs();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: #686f88;
+  color: @neutral_medium_gray;
 }
 
 .MessageMetadata--Timestamp--left {
   .margin--left--xs();
   font-size: 0.875rem;
   .text--line-height-1();
-  color: #686f88;
+  color: @neutral_medium_gray;
 }
