--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -15,6 +15,7 @@
 // Neutral colors:
 @neutral_black: #15131c;
 @neutral_dark_gray: #474c5e;
+@neutral_medium_gray: #686f88;
 @neutral_gray: #a8aeba;
 @neutral_silver: #e3e6eb;
 @neutral_off_white: #fafbfc;
