Fix MessagingInput icon style

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -51,6 +51,7 @@ button.MessagingInput--SendButton {
   }
 
   .MessagingInput--SendIcon {
+    height: 100%;
     display: block;
     background-color: transparent;
     border-radius: 50%;
