Add comments for media queries

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -43,6 +43,7 @@ button.MessagingInput--SendButton {
   padding: 0.625rem @size_l 0.625rem;
 }
 
+// For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
   .MessagingInput--TextField {
     .margin--right--none();
