--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -44,6 +44,7 @@
   color: @neutral_medium_gray;
 }
 
+// For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
   .MessageMetadata--Message--right {
     .margin--y--xs();
