--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -41,6 +41,7 @@
 button.MessagingInput--SendButton {
   // Sizing for this button is pretty particular
   padding: 0.6875rem 1.5rem 0.6875rem;
+  line-height: normal;
 }
 
 // For mobile/tablet
