TopBarButton accessibility: moving div outside <a> tag

--- a/src/TopBar/TopBarButton.less
+++ b/src/TopBar/TopBarButton.less
@@ -1,6 +1,10 @@
 @import (reference) "../less/index";
 @import (reference) "./common";
 
+.TopBarButton--container {
+  position: relative;
+}
+
 .TopBarButton {
   .text--semi-bold;
   .button--reset;
@@ -14,7 +18,6 @@
   color: @neutral_white;
   height: @topBarHeight - @size_xs;
   .padding--x--m;
-  position: relative;
   text-align: center;
 }
 
