--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -16,7 +16,7 @@ h3.AlertBox--title {
 }
 
 .AlertBox--header {
-  .padding--bottom--xs();
+  .padding--bottom--2xs();
 }
 
 .AlertBox--Icon--container {
