Undo breaking change to MessagingThreadHistory

--- a/src/MessagingThreadHistory/MessagingThreadHistory.less
+++ b/src/MessagingThreadHistory/MessagingThreadHistory.less
@@ -3,6 +3,7 @@
 .ThreadHistory--Container {
   overflow-y: auto;
   .padding--right--s();
+  flex-direction: column;
 }
 
 .ThreadHistory--Divider {
