Add beta tags to all beta components

--- a/components/MessagingAvatarView.less
+++ b/components/MessagingAvatarView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingAvatarView--beta {
+  .text--italic();
+}
+
 .MessagingAvatarView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
