--- a/components/MessagingInputView.less
+++ b/components/MessagingInputView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingInputView--beta {
+  .text--italic();
+}
+
 .MessagingInputView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
