--- a/components/MessagingThreadHistoryView.less
+++ b/components/MessagingThreadHistoryView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingThreadHistoryView--beta {
+  .text--italic();
+}
+
 .MessagingThreadHistoryView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
