--- a/components/MessagingThreadListItemView.less
+++ b/components/MessagingThreadListItemView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingThreadListItemView--beta {
+  .text--italic();
+}
+
 .MessagingThreadListItemView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
