--- a/docs/components/MessagingBubbleView.less
+++ b/docs/components/MessagingBubbleView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingBubbleView--beta {
+  .text--italic();
+}
+
 .MessagingBubbleView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
