--- a/docs/components/Table2BetaView.less
+++ b/docs/components/Table2BetaView.less
@@ -1,5 +1,9 @@
 @import (reference) "~less/index";
 
+.Table2BetaView--beta {
+  .text--italic();
+}
+
 .Table2BetaView--config {
   .margin--y--s;
   .margin--left--none;
